FUTBOL BRASIL: Fechas en Portugues, Convertir el texto a formato que soporte el view (\n)

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -164,6 +164,7 @@
     <!-- build:js scripts/custom.js -->
         <!-- injector:js -->
         <script src="js/iscroll-probe.js"></script>
+        <script src="js/pt-br.js"></script>
         <script src="js/config.js"></script>
         <script src="js/application.js"></script>
         <script src="modules/core/core.js"></script>
