FUTBOL BRASIL: Merge de commit "Fechas en Portugues, Convertir el texto a formato que soporte el view (\n)" de branch dev
Conflicts:
	FutbolBrasil/futbol-brasil/Gruntfile.js
	FutbolBrasil/futbol-brasil/app/index.html
	FutbolBrasil/futbol-brasil/app/styles/default.css

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -163,43 +163,43 @@
 <!-- endbuild -->
 
 <!-- build:js scripts/custom.js -->
-<!-- injector:js -->
-<script src="js/config.js"></script>
-<script src="js/application.js"></script>
-<script src="modules/core/core.js"></script>
-<script src="modules/core/config/routes.js"></script>
-<script src="modules/core/services/client-manager.js"></script>
-<script src="modules/core/services/client.js"></script>
-<script src="modules/core/services/cordova-app.js"></script>
-<script src="modules/core/services/cordova-device.js"></script>
-<script src="modules/core/services/domain.js"></script>
-<script src="modules/core/services/facebook-manager.js"></script>
-<script src="modules/core/services/news-service.js"></script>
-<script src="modules/core/services/push-manager.js"></script>
-<script src="modules/core/services/settings.js"></script>
-<script src="modules/core/services/social-apps-manager.js"></script>
-<script src="modules/core/services/teams-manager.js"></script>
-<script src="modules/core/services/utilities.js"></script>
-<script src="modules/core/services/web-manager.js"></script>
-<script src="modules/core/directives/error.js"></script>
-<script src="modules/core/directives/loading.js"></script>
-<script src="modules/core/directives/my-scroll.js"></script>
-<script src="modules/core/directives/on-last-repeat.js"></script>
-<script src="modules/core/controllers/friends.js"></script>
-<script src="modules/core/controllers/leaderboard.js"></script>
-<script src="modules/core/controllers/login.js"></script>
-<script src="modules/core/controllers/main.js"></script>
-<script src="modules/core/controllers/match.js"></script>
-<script src="modules/core/controllers/mtm.js"></script>
-<script src="modules/core/controllers/news-detail.js"></script>
-<script src="modules/core/controllers/news.js"></script>
-<script src="modules/core/controllers/points.js"></script>
-<script src="modules/core/controllers/prediction.js"></script>
-<script src="modules/core/controllers/scorers.js"></script>
-<script src="modules/core/controllers/settings.js"></script>
-<script src="modules/core/controllers/standings.js"></script>
-<script src="modules/core/controllers/team-selection.js"></script>
-<!-- endinjector -->
+    <!-- injector:js -->
+    <script src="js/iscroll-probe.js"></script>
+    <script src="js/pt-br.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/application.js"></script>
+    <script src="modules/core/core.js"></script>
+    <script src="modules/core/config/routes.js"></script>
+    <script src="modules/core/services/client-manager.js"></script>
+    <script src="modules/core/services/cordova-app.js"></script>
+    <script src="modules/core/services/cordova-device.js"></script>
+    <script src="modules/core/services/domain.js"></script>
+    <script src="modules/core/services/facebook-manager.js"></script>
+    <script src="modules/core/services/news-service.js"></script>
+    <script src="modules/core/services/push-manager.js"></script>
+    <script src="modules/core/services/social-apps-manager.js"></script>
+    <script src="modules/core/services/teams-manager.js"></script>
+    <script src="modules/core/services/utilities.js"></script>
+    <script src="modules/core/services/web-manager.js"></script>
+    <script src="modules/core/directives/error.js"></script>
+    <script src="modules/core/directives/loading.js"></script>
+    <script src="modules/core/directives/menu-item.js"></script>
+    <script src="modules/core/directives/menu.js"></script>
+    <script src="modules/core/directives/my-scroll.js"></script>
+    <script src="modules/core/directives/on-last-repeat.js"></script>
+    <script src="modules/core/controllers/friends.js"></script>
+    <script src="modules/core/controllers/leaderboard.js"></script>
+    <script src="modules/core/controllers/login.js"></script>
+    <script src="modules/core/controllers/main.js"></script>
+    <script src="modules/core/controllers/match.js"></script>
+    <script src="modules/core/controllers/mtm.js"></script>
+    <script src="modules/core/controllers/news-detail.js"></script>
+    <script src="modules/core/controllers/news.js"></script>
+    <script src="modules/core/controllers/points.js"></script>
+    <script src="modules/core/controllers/prediction.js"></script>
+    <script src="modules/core/controllers/scorers.js"></script>
+    <script src="modules/core/controllers/standings.js"></script>
+    <!-- endinjector -->
 <!-- endbuild -->
 
 </body>
