--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -36,7 +36,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav class="navbar navbar-default" style="margin-bottom: 0;">
+        <nav class="navbar navbar-default">
             <div class="navbar-header">
                 <header>
                     <div data-section="news" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 section"
@@ -168,12 +168,14 @@
 <script src="modules/core/core.js"></script>
 <script src="modules/core/config/routes.js"></script>
 <script src="modules/core/services/client-manager.js"></script>
+<script src="modules/core/services/client.js"></script>
 <script src="modules/core/services/cordova-app.js"></script>
 <script src="modules/core/services/cordova-device.js"></script>
 <script src="modules/core/services/domain.js"></script>
 <script src="modules/core/services/facebook-manager.js"></script>
 <script src="modules/core/services/news-service.js"></script>
 <script src="modules/core/services/push-manager.js"></script>
+<script src="modules/core/services/settings.js"></script>
 <script src="modules/core/services/social-apps-manager.js"></script>
 <script src="modules/core/services/teams-manager.js"></script>
 <script src="modules/core/services/utilities.js"></script>
@@ -193,7 +195,9 @@
 <script src="modules/core/controllers/points.js"></script>
 <script src="modules/core/controllers/prediction.js"></script>
 <script src="modules/core/controllers/scorers.js"></script>
+<script src="modules/core/controllers/settings.js"></script>
 <script src="modules/core/controllers/standings.js"></script>
+<script src="modules/core/controllers/team-selection.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
 
