--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -40,26 +40,25 @@
         <nav class="navbar navbar-default">
             <div class="navbar-header">
                 <header>
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"
-                       style="text-align: left;">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-left" >
                         <i ng-click="runBackButton(true)" class="icon mdi-navigation-arrow-back back-button {{isActiveButton}}" style="font-size: 1.8em; margin-left: 10px;"></i>
                         <img  ng-click="showMenu()" src="img/logo.svg" onerror="this.src='img/logo.png'"
-                             style="width: auto; height: 30px;  position: relative; vertical-align: middle;" />
-                  </div>
+                              style="width: auto; height: 30px;  position: relative; vertical-align: middle;" />
+                    </div>
                 </header>
             </div>
         </nav>
     </div>
 
-    <div ui-view  >
+    <div ui-view >
     </div>
 
     <loading></loading>
     <error></error>
     <menu>
-      <menu-item section="news" icon="mdi-action-label">NOTISTASTS</menu-item>
-      <menu-item section="prediction" icon="mdi-action-event">PALPITES</menu-item>
-      <menu-item section="settings" icon="mdi-action-settings">DEFINI&#199;&#213;ES</menu-item>
+        <menu-item section="news" icon="mdi-action-label">NOTISTASTS</menu-item>
+        <menu-item section="prediction" icon="mdi-action-event">PALPITES</menu-item>
+        <menu-item section="settings" icon="mdi-action-settings">DEFINI&#199;&#213;ES</menu-item>
     </menu>
 
 
@@ -163,43 +162,46 @@
 <!-- endbuild -->
 
 <!-- build:js scripts/custom.js -->
-    <!-- injector:js -->
-    <script src="js/iscroll-probe.js"></script>
-    <script src="js/pt-br.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/application.js"></script>
-    <script src="modules/core/core.js"></script>
-    <script src="modules/core/config/routes.js"></script>
-    <script src="modules/core/services/client-manager.js"></script>
-    <script src="modules/core/services/cordova-app.js"></script>
-    <script src="modules/core/services/cordova-device.js"></script>
-    <script src="modules/core/services/domain.js"></script>
-    <script src="modules/core/services/facebook-manager.js"></script>
-    <script src="modules/core/services/news-service.js"></script>
-    <script src="modules/core/services/push-manager.js"></script>
-    <script src="modules/core/services/social-apps-manager.js"></script>
-    <script src="modules/core/services/teams-manager.js"></script>
-    <script src="modules/core/services/utilities.js"></script>
-    <script src="modules/core/services/web-manager.js"></script>
-    <script src="modules/core/directives/error.js"></script>
-    <script src="modules/core/directives/loading.js"></script>
-    <script src="modules/core/directives/menu-item.js"></script>
-    <script src="modules/core/directives/menu.js"></script>
-    <script src="modules/core/directives/my-scroll.js"></script>
-    <script src="modules/core/directives/on-last-repeat.js"></script>
-    <script src="modules/core/controllers/friends.js"></script>
-    <script src="modules/core/controllers/leaderboard.js"></script>
-    <script src="modules/core/controllers/login.js"></script>
-    <script src="modules/core/controllers/main.js"></script>
-    <script src="modules/core/controllers/match.js"></script>
-    <script src="modules/core/controllers/mtm.js"></script>
-    <script src="modules/core/controllers/news-detail.js"></script>
-    <script src="modules/core/controllers/news.js"></script>
-    <script src="modules/core/controllers/points.js"></script>
-    <script src="modules/core/controllers/prediction.js"></script>
-    <script src="modules/core/controllers/scorers.js"></script>
-    <script src="modules/core/controllers/standings.js"></script>
-    <!-- endinjector -->
+<!-- injector:js -->
+<script src="js/pt-br.js"></script>
+<script src="js/config.js"></script>
+<script src="js/application.js"></script>
+<script src="modules/core/core.js"></script>
+<script src="modules/core/config/routes.js"></script>
+<script src="modules/core/services/client-manager.js"></script>
+<script src="modules/core/services/client.js"></script>
+<script src="modules/core/services/cordova-app.js"></script>
+<script src="modules/core/services/cordova-device.js"></script>
+<script src="modules/core/services/domain.js"></script>
+<script src="modules/core/services/facebook-manager.js"></script>
+<script src="modules/core/services/news-service.js"></script>
+<script src="modules/core/services/push-manager.js"></script>
+<script src="modules/core/services/settings.js"></script>
+<script src="modules/core/services/social-apps-manager.js"></script>
+<script src="modules/core/services/teams-manager.js"></script>
+<script src="modules/core/services/utilities.js"></script>
+<script src="modules/core/services/web-manager.js"></script>
+<script src="modules/core/directives/error.js"></script>
+<script src="modules/core/directives/loading.js"></script>
+<script src="modules/core/directives/menu-item.js"></script>
+<script src="modules/core/directives/menu.js"></script>
+<script src="modules/core/directives/my-scroll.js"></script>
+<script src="modules/core/directives/on-last-repeat.js"></script>
+<script src="modules/core/controllers/friends.js"></script>
+<script src="modules/core/controllers/leaderboard.js"></script>
+<script src="modules/core/controllers/login.js"></script>
+<script src="modules/core/controllers/main.js"></script>
+<script src="modules/core/controllers/match.js"></script>
+<script src="modules/core/controllers/mtm.js"></script>
+<script src="modules/core/controllers/news-detail.js"></script>
+<script src="modules/core/controllers/news.js"></script>
+<script src="modules/core/controllers/points.js"></script>
+<script src="modules/core/controllers/prediction.js"></script>
+<script src="modules/core/controllers/scorers.js"></script>
+<script src="modules/core/controllers/settings.js"></script>
+<script src="modules/core/controllers/standings.js"></script>
+<script src="modules/core/controllers/team-selection.js"></script>
+<!-- endinjector -->
 <!-- endbuild -->
 
 </body>
