--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -176,11 +176,13 @@
 <script src="modules/core/services/bets.js"></script>
 <script src="modules/core/services/client-manager.js"></script>
 <script src="modules/core/services/client.js"></script>
+<script src="modules/core/services/competitions.js"></script>
 <script src="modules/core/services/cordova-app.js"></script>
 <script src="modules/core/services/cordova-device.js"></script>
 <script src="modules/core/services/domain.js"></script>
 <script src="modules/core/services/facebook-manager.js"></script>
 <script src="modules/core/services/i18n.js"></script>
+<script src="modules/core/services/moment.js"></script>
 <script src="modules/core/services/news-service.js"></script>
 <script src="modules/core/services/push-manager.js"></script>
 <script src="modules/core/services/settings.js"></script>
