FUTBOL BRASIL:  - Modificaciones en MTM - Mapeado de nombre de jugador en Scorers - Mapeado de nombre de equipos en MTM

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -45,6 +45,7 @@
                 <header>
                     <div class="col-xs-10 text-left">
                         <i class="icon drawer-icon icon-white"
+                           ng-hide=""
                            ng-class="getDrawerIcon()"
                            ng-click="runBackButton()"></i>
                         <span class="drawer-title" ng-cloak>
