--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -75,37 +75,38 @@
         <menu-item section="prediction" icon="mdi-action-event">{{'SECTIONS.BETS' | translate}}</menu-item>
         <menu-item section="settings" icon="mdi-action-settings">{{'SECTIONS.SETTINGS' | translate}}</menu-item>
     </menu>
+    <ng-include src="'modules/core/views/templates/update-modal.html'"></ng-include>
 
     <div class="row">
         <footer class="footer" ng-hide="getSection() === 'settings'">
             <div data-section="notistats" class="row"
                  ng-class="{active: getSection() === 'notistats', hide: getSection() !== 'notistats'}">
                 <div class="col-xs-15 option" ui-sref-active="active">
-                    <a ui-sref="match">
+                    <a ui-sref="match" class="footer-section">
                         <span class="icon-balon"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.MATCHES</span>
                     </a>
                 </div>
                 <div class="col-xs-15 option" ui-sref-active="active">
-                    <a ui-sref="standings">
+                    <a ui-sref="standings" class="footer-section">
                         <span class="icon-tabela"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.STANDINGS</span>
                     </a>
                 </div>
                 <div class="col-xs-15 option" ui-sref-active="active" >
-                    <a ui-sref="news">
+                    <a ui-sref="news" class="footer-section">
                         <span class="icon-noticias"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.NEWS</span>
                     </a>
                 </div>
                 <div class="col-xs-15 option" ui-sref-active="active" >
-                    <a ui-sref="scorers">
+                    <a ui-sref="scorers" class="footer-section">
                         <span class="icon-artilharia"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.SCORERS</span>
                     </a>
                 </div>
                 <div class="col-xs-15 option" ui-sref-active="active" >
-                    <a ui-sref="mtm">
+                    <a ui-sref="mtm" class="footer-section">
                         <span class="icon-envivo"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.LIVE</span>
                     </a>
@@ -115,25 +116,25 @@
             <div data-section="bets" class="row"
                  ng-class="{active: getSection() === 'bets', hide: getSection() !== 'bets'}">
                 <div class="col-xs-3 option" ui-sref-active="active">
-                    <a ui-sref="prediction">
+                    <a ui-sref="prediction" class="footer-section">
                         <span class="icon-balon"></span>
                         <span class="glyphicon-class" translate>SECTIONS.BETS.PREDICTIONS</span>
                     </a>
                 </div>
                 <div class="col-xs-3 option" ui-sref-active="active" >
-                    <a ui-sref="leaderboard">
+                    <a ui-sref="leaderboard" class="footer-section">
                         <span class="icon-tabela"></span>
                         <span class="glyphicon-class" translate>SECTIONS.BETS.LEADERBOARDS</span>
                     </a>
                 </div>
                 <div class="col-xs-3 option" ui-sref-active="active" >
-                    <a ui-sref="friends">
+                    <a ui-sref="friends" class="footer-section">
                         <span class="icon-artilharia"></span>
                         <span class="glyphicon-class" translate>SECTIONS.BETS.FRIENDS</span>
                     </a>
                 </div>
                 <div class="col-xs-3 option" ui-sref-active="active" >
-                    <a ui-sref="points">
+                    <a ui-sref="points" class="footer-section">
                         <span class="icon-puntos"></span>
                         <span class="glyphicon-class" translate>SECTIONS.BETS.POINTS</span>
                     </a>
