--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -184,6 +184,7 @@
 <script src="modules/core/services/cordova-device.js"></script>
 <script src="modules/core/services/domain.js"></script>
 <script src="modules/core/services/facebook-manager.js"></script>
+<script src="modules/core/services/i-scroll.js"></script>
 <script src="modules/core/services/i18n.js"></script>
 <script src="modules/core/services/moment.js"></script>
 <script src="modules/core/services/news.js"></script>
