FUTBOL BRASIL: Localización de idiomas en fechas

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -170,6 +170,8 @@
 
 <!-- build:js scripts/custom.js -->
 <!-- injector:js -->
+<script src="js/es.js"></script>
+<script src="js/pt.js"></script>
 <script src="js/pt-br.js"></script>
 <script src="js/config.js"></script>
 <script src="js/application.js"></script>
