FUTBOL BRASIL:  - Completada funcionalidad de Upstream - Refactor en algunos services

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -193,6 +193,7 @@
 <script src="modules/core/services/settings.js"></script>
 <script src="modules/core/services/social-apps-manager.js"></script>
 <script src="modules/core/services/teams-manager.js"></script>
+<script src="modules/core/services/upstream.js"></script>
 <script src="modules/core/services/utilities.js"></script>
 <script src="modules/core/services/web-manager.js"></script>
 <script src="modules/core/directives/error.js"></script>
