FUTBOL BRASIL:  - Avances en mensajes de manejo de errores a lo largo del App

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -145,6 +145,8 @@
     </div>
 </div>
 
+<div id="fb-root"></div>
+
 <!-- build:js scripts/vendor.js -->
 <!-- injector:bowerjs -->
 <script src="lib/jquery/dist/jquery.js"></script>
