FUTBOL BRASIL:  - Trabajando en error de carga de Facebook "Failed to load resource: net::ERR_FILE_NOT_FOUND file://connect.facebook.net/en_US/all.js"

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -38,6 +38,8 @@
       ng-swipe-right="prevPage()"
       ng-swipe-left="nextPage()">
 
+<!--<div id="fb-root"></div>-->
+
 <div class="container-fluid">
     <div class="row">
         <nav class="navbar navbar-default">
@@ -145,8 +147,6 @@
     </div>
 </div>
 
-<div id="fb-root"></div>
-
 <!-- build:js scripts/vendor.js -->
 <!-- injector:bowerjs -->
 <script src="lib/jquery/dist/jquery.js"></script>
@@ -180,6 +180,7 @@
 <script src="js/application.js"></script>
 <script src="modules/core/core.js"></script>
 <script src="modules/core/config/routes.js"></script>
+<script src="modules/core/services/analytics.js"></script>
 <script src="modules/core/services/app.js"></script>
 <script src="modules/core/services/bets.js"></script>
 <script src="modules/core/services/client-manager.js"></script>
