--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -168,6 +168,7 @@
 <script src="lib/iscrolltest/build/iscroll-probe.js"></script>
 <script src="lib/angular-translate/angular-translate.js"></script>
 <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+<script src="lib/angular-socialsharing/dist/angular-socialsharing.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
 
