--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -38,7 +38,7 @@
       ng-swipe-right="prevPage()"
       ng-swipe-left="nextPage()">
 
-<!--<div id="fb-root"></div>-->
+<div id="fb-root"></div>
 
 <div class="container-fluid">
     <div class="row">
@@ -198,6 +198,7 @@
 <script src="modules/core/services/settings.js"></script>
 <script src="modules/core/services/social-apps-manager.js"></script>
 <script src="modules/core/services/teams-manager.js"></script>
+<script src="modules/core/services/update.js"></script>
 <script src="modules/core/services/upstream.js"></script>
 <script src="modules/core/services/utilities.js"></script>
 <script src="modules/core/services/web-manager.js"></script>
