--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -72,16 +72,19 @@
 
     <loading></loading>
     <error></error>
+
     <menu ng-cloak>
         <menu-item section="news" icon="mdi-action-label">{{'SECTIONS.NOTISTATS' | translate}}</menu-item>
         <menu-item section="prediction" icon="mdi-action-event">{{'SECTIONS.BETS' | translate}}</menu-item>
         <menu-item section="settings" icon="mdi-action-settings">{{'SECTIONS.SETTINGS' | translate}}</menu-item>
     </menu>
+
     <ng-include src="'modules/core/views/templates/update-modal.html'"></ng-include>
     <ng-include src="'modules/core/views/templates/share-modal.html'"></ng-include>
+    <ng-include src="'modules/core/views/templates/info-modal.html'"></ng-include>
 
     <div class="row">
-        <footer class="footer" ng-hide="getSection() === 'settings'">
+        <footer class="footer" ng-hide="isOnUtilitySection()">
             <div data-section="notistats" class="row"
                  ng-class="{active: getSection() === 'notistats', hide: getSection() !== 'notistats'}">
                 <div class="col-xs-15 option" ui-sref-active="active">
