FUTBOL BRASIL:  - Manejo de Errores completo en News

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -197,6 +197,7 @@
 <script src="modules/core/services/i18n.js"></script>
 <script src="modules/core/services/moment.js"></script>
 <script src="modules/core/services/news.js"></script>
+<script src="modules/core/services/notification.js"></script>
 <script src="modules/core/services/push-manager.js"></script>
 <script src="modules/core/services/settings.js"></script>
 <script src="modules/core/services/social-apps-manager.js"></script>
