--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -126,31 +126,31 @@
         <footer class="footer" ng-hide="isOnUtilitySection()">
             <div data-section="notistats" class="row"
                  ng-class="{active: getSection() === 'notistats', hide: getSection() !== 'notistats'}">
-                <div class="col-xs-15 option" ui-sref-active="active">
+                <div class="col-xs-2 col-xs-offset-1 option" ui-sref-active="active">
                     <a ui-sref="match" class="footer-section">
                         <span class="icon-balon"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.MATCHES</span>
                     </a>
                 </div>
-                <div class="col-xs-15 option" ui-sref-active="active">
+                <div class="col-xs-2 option" ui-sref-active="active">
                     <a ui-sref="standings" class="footer-section">
                         <span class="icon-tabela"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.STANDINGS</span>
                     </a>
                 </div>
-                <div class="col-xs-15 option" ui-sref-active="active" >
+                <div class="col-xs-2 option" ui-sref-active="active" >
                     <a ui-sref="news" class="footer-section">
                         <span class="icon-noticias"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.NEWS</span>
                     </a>
                 </div>
-                <div class="col-xs-15 option" ui-sref-active="active" >
+                <div class="col-xs-2 option" ui-sref-active="active" >
                     <a ui-sref="scorers" class="footer-section">
                         <span class="icon-artilharia"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.SCORERS</span>
                     </a>
                 </div>
-                <div class="col-xs-15 option" ui-sref-active="active" >
+                <div class="col-xs-2 option" ui-sref-active="active" >
                     <a ui-sref="mtm" class="footer-section">
                         <span class="icon-envivo"></span>
                         <span class="glyphicon-class" translate>SECTIONS.NOTISTATS.LIVE</span>
