FUTBOL BRASIL:  - Adaptados Strings en Standings a i18n

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -99,16 +99,16 @@
         </menu-item>
 
         <!--<div class="hidden-xs">-->
-            <menu-sub-item section="match" icon="icon-balon">
+            <menu-sub-item section="prediction" icon="icon-balon">
                 {{'SECTIONS.BETS.PREDICTIONS' | translate}}
             </menu-sub-item>
-            <menu-sub-item section="match" icon="icon-tabela">
+            <menu-sub-item section="leaderboard" icon="icon-tabela">
                 {{'SECTIONS.BETS.LEADERBOARDS' | translate}}
             </menu-sub-item>
-            <menu-sub-item section="match" icon="icon-artilharia">
+            <menu-sub-item section="friends" icon="icon-artilharia">
                 {{'SECTIONS.BETS.FRIENDS' | translate}}
             </menu-sub-item>
-            <menu-sub-item section="match" icon="icon-puntos">
+            <menu-sub-item section="points" icon="icon-puntos">
                 {{'SECTIONS.BETS.POINTS' | translate}}
             </menu-sub-item>
         <!--</div>-->
