FUTBOL BRASIL:  - Mejoras en i18n y manejo de lenguajes en general dentro del App

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -211,6 +211,7 @@
 <script src="lib/angular-translate/angular-translate.js"></script>
 <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 <script src="lib/angular-socialsharing/dist/angular-socialsharing.js"></script>
+<script src="lib/angular-translate-loader-url/angular-translate-loader-url.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
 
