FUTBOL BRASIL:  - Agregada funcionalidad de Logout - Agregado Redirect a Remind/Get Credentials desde dialogo de sección bloqueada

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -115,6 +115,10 @@
         <menu-item section="settings" icon="mdi-action-settings">
             {{'SECTIONS.SETTINGS' | translate}}
         </menu-item>
+
+        <menu-item action="logout" icon="mdi-navigation-cancel">
+            {{'LOGOUT' | translate}}
+        </menu-item>
     </menu>
 
     <ng-include src="'modules/core/views/templates/update-modal.html'"></ng-include>
